[tool.poetry]
name = "passwords-server"
version = "0.1.0"
description = ""
authors = ["konkov.danil <buroroll@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111.0"
torch = "^2.3.0"
streamlit = "^1.35.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
